--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,25 +1,25 @@
 # main links links
 main:
   - title: "About Me"
-    url: "/#about-me"
+    url: "#about-me"
 
   - title: "News"
-    url: "/#-news"
+    url: "#-news"
 
   - title: "Publications"
-    url: "/#-publications"
+    url: "#-publications"
 
   - title: "Conference Presentations"
-    url: "/#-conference-presentations"
+    url: "#-conference-presentations"
 
   - title: "Work Experience"
-    url: "/#-work-experience"
+    url: "#-work-experience"
 
   - title: "Education Background"
-    url: "/#-education-background"
+    url: "#-education-background"
 
   - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "#-honors-and-awards"
 
   - title: "Professional Services"
-    url: "/#-professional-services"
+    url: "#-professional-services"
