Add Certifications & Licenses to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,8 @@ main:
   - title: "Honors and Awards"
     url: "#-honors-and-awards"
 
+  - title: "Certifications & Licenses"
+    url: "#-certifications-and-licenses"
+
   - title: "Professional Services"
     url: "#-professional-services"
