--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,9 @@ author:
   youtube          :
   wikipedia        :
 
+<a class="btn btn--inverse" href="/files/Hong_Lang_CV.pdf" target="_blank" rel="noopener">
+  <i class="fas fa-download" aria-hidden="true"></i> Curriculum Vitae
+</a>
 
 # Reading Files
 include:
